--- a/CharstersCount/pom.xml
+++ b/CharstersCount/pom.xml
@@ -1,13 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>ua.com.foxminded</groupId>
-  <artifactId>charsters-count</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>CharstersCount</name>
-  
-  <properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>ua.com.foxminded</groupId>
+   <artifactId>charsters-count</artifactId>
+   <version>0.0.1-SNAPSHOT</version>
+   <packaging>jar</packaging>
+   
+   <properties>
       <junit.jupiter.version>5.5.2</junit.jupiter.version>
       <maven.surefire.version>2.22.1</maven.surefire.version>
+      <mockito.version>3.3.3</mockito.version>
+      <jacoco.version>0.8.3</jacoco.version>
+      <project.name>SymbolStaticstics</project.name>
    </properties>
 
    <build>
@@ -25,6 +30,49 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>${maven.surefire.version}</version>
          </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+               <finalName>${project.name}</finalName>
+               <archive>
+                  <manifest>
+                     <mainClass>ua.com.foxminded.symbolstaticstics.CharstersCounterConsoleApplication</mainClass>
+                  </manifest>
+               </archive>
+               <descriptorRefs>
+                  <descriptorRef>jar-with-dependencies</descriptorRef>
+               </descriptorRefs>
+               <appendAssemblyId>false</appendAssemblyId>
+            </configuration>
+            <executions>
+               <execution>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>single</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${jacoco.version}</version>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>prepare-agent</goal>
+                  </goals>
+               </execution>
+               <execution>
+                  <id>report</id>
+                  <phase>test</phase>
+                  <goals>
+                     <goal>report</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
       </plugins>
    </build>
 
@@ -41,6 +89,12 @@
          <version>${junit.jupiter.version}</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.mockito</groupId>
+         <artifactId>mockito-junit-jupiter</artifactId>
+         <version>${mockito.version}</version>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
-   
+
 </project>
